# Rust_Claw_Power-furnace-UI

./: Cargo.toml  README.md  README_TW.md  build_and_open.bat  project.godot  test_godot.bat
comfy_api/latest/: __init__.py  _io.py  _ui.py
comfy_api/latest/_input/: video_types.py
src/: main.rs
src/open_source_plugins/auto-skill/: Cargo.toml
src/open_source_plugins/auto-skill/src/: lib.rs
src/role play/: mod.rs  role play.rs  visual.rs
src/skills/: Power Furnace Tentacle Core_SKILL.md  SKILL.md  SOUL.md
src/skills/Proof Society/: Mode 1.md  Mode 2.md  Mode 3.md  Proof Society.md
src/skills/Skill System/: D型實戰範例.md  skill_v4.1.md  skill_v5.1.md  skill_v6.1.md  skill_v7.1.md  skill_v8.1.md  skill_v9.md
src/skills/references/: 日本視覺小說沉浸式寫作教學書.md
動力爐_樓層目錄/: b_17.tscn15228746295.tmp  b_17.tscn1687129551.tmp  rust_院長.gd  rust_院長.gd.uid  動力爐_樓層目錄.tscn  總管理系統.gd  總管理系統.gd.uid
